# OI-Codes

./: .gitignore  CMakeLists.txt  P3324.cpp  P5325.cpp
AtCoder/: AT_abc238_d.cpp  AT_abc297_g.cpp  AT_abc300_e.cpp  AT_abc313_f.cpp  AT_agc017_d.cpp  AT_agc030_d.cpp  AT_arc096_c.cpp  AT_arc131_c.cpp  AT_arc143_c.cpp  AT_arc148_d.cpp  AT_joisc2014_c.cpp  AT_past202005_j.cpp  arc118_c.cpp  arc124_c.cpp  arc125_b.cpp  arc135_c.cpp  arc148_a.cpp  arc161_a.cpp  caddi2018_a.cpp  tenka1_2018_d.cpp
CodeForces/: 1174E.cpp  1469D.cpp  1485C.cpp  1513D.cpp  1575G.cpp  1626F.cpp  1656D.cpp  1737E.cpp  1762D.cpp  1762E.cpp  1779C.cpp  1787E.cpp  1798E.cpp  1815D.cpp  1823F.cpp  1834E.cpp  1845D.cpp  1850D.cpp  1850F.cpp  653G.cpp  786B.cpp  803C.cpp  838D.cpp  896B.cpp  896C.cpp  915G-2.cpp  915G.cpp
HZ/: 17.2.cpp  17.3.cpp  17.4.cpp  17.5.cpp  17.6.cpp  17.7.cpp  18.1.cpp  18.2.cpp  18.3.cpp  18.4.cpp  18.5.cpp  18.6.cpp  19.1.cpp  19.2.cpp  19.3.cpp  19.4.cpp  19.5.cpp  19.6.cpp  20.1.cpp  20.2.cpp  20.3.cpp  20.4.cpp  20.5.cpp  20.6.cpp  20.7.cpp  20.8.cpp  26.1.cpp  26.2.cpp  26.3.cpp  26.4.cpp  26.5.cpp  26.6.cpp  28.1.cpp  28.2.cpp  28.3.cpp  28.4.cpp  28.5.cpp  28.6.cpp  28.7.cpp  28.8.cpp  (+142 more)
LocalInclude/: debug.h
Luogu/: B2014.cpp  B2017.cpp  P1072.cpp  P1192.cpp  P1217.cpp  P1297.cpp  P1365.cpp  P1486.splay.cpp  P1494.cpp  P1516.cpp  P1654.cpp  P1733.cpp  P1791.cpp  P1806.cpp  P1816.cpp  P1829.cpp  P1886.cpp  P1896.cpp  P1967.cpp  P1972.cpp  P2041.cpp  P2054.cpp  P2147.cpp  P2153.cpp  P2155.cpp  P2173.cpp  P2197.cpp  P2216.cpp  P2218.cpp  P2234.splay.cpp  P2257.cpp  P2261.cpp  P2286.splay.cpp  P2303.cpp  P2319.cpp  P2322.cpp  P2341.cpp  (+136 more)
(+52 files in other folders)
